Bugfix z-index + Matic

--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,7 @@
     border-radius: 10px 0px 10px 0PX;
     padding: 16px;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     left: 50%;
     bottom: 30px;
     font-size: 17px;
